- pts-core: Separate out NoNetworkCommunication user option into NoInternetCommunication/NoNetworkCommunication user config options for those still wanting LAN/intranet support
- pts-core: Add support to PTS clients for automatically finding Phoromatic Servers using Avahi zero-conf network discovery
- pts-core: Improvements to make-download-cache
- phoromatic: Begin allowing results to be stored locally, not dependent on OpenBenchmarking.org storage
- phoromatic: Advertise Phoromatic Server using Avahi zero-conf networking service when avahi-publish available and AdvertiseServiceZeroConf user config option is TRUE

Phoronix Test Suite 5.4 Milestone 1
5 September 2014

- pts-core: Sanitize pts_result_file user strings
- pts-core: Don't set memory_limit with HHVM
- pts-core: Drop phoromatic_legacy support (old Phoromatic.com version)
- system_monitor: Correct perf-per-Watt calculation for LIB results
- phodevi: Support Nouveau's pstate formatting changes to read core/mem MHz on newer kernels
- phodevi: Support for reading monitor EDID over sysfs, decoding descriptors, and obtaining monitor name (should improve monitor name reporting for Intel Linux systems)
- phodevi: Improved SoC detection
- pts_LineGraph: Alignment fix for keys

Phoronix Test Suite 5.2.1-Khanino
11 July 2014

- pts-core: Add VDPAU as a dependency to the xorg-video external dependency on more platforms
- pts-core: Don't check OpenBenchmarking.org credentials when the network is down
- pts-core: Rework result-file-to-text sub-command, show text-based graph results
- phodevi: Improve NVIDIA binary driver GPU utilization detection
- phodevi: Add DDE / Deepin Desktop Environment detection
- pts_Graph: Few minor graph alignment corrections

Phoronix Test Suite 5.2.0-Khanino
5 June 2014

- pts-core: Support for GZ compressing result file XML data before uploading to OpenBenchmarking.org
- pts_Graph: Further graphing improvements

Phoronix Test Suite 5.2 Milestone 4
29 May 2014
